--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -33,7 +33,7 @@
 </div>
 
   {{#if message }}
-  <div class="error-message">{{ message }}</div>
+  <div class="error-message d-flex justify-content-center">{{ message }}</div>
   {{/if}}
 
 
