--- a/views/match/table.hbs
+++ b/views/match/table.hbs
@@ -1,11 +1,6 @@
-<h2>Schedule a table</h2>
-<br>
+<h2>Choose a location</h2>
+
 <div id="map"></div>
-<br>
-
-<h3>Choose location</h3>
-<br>
-
 
 <div class="d-flex flex-column">
 
