--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,21 +19,19 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-white" id="navbar">
-
-    <a class="navbar-brand" href="homepage"><img src="/images/pingPong.png" id="logo"></a>
+    <a class="navbar-brand" href="/homepage"><img src="/images/pingPong.png" id="logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
+      {{#if isConnected}}
         <li class="nav-item">
           <a class="nav-link" href="/match">Schedule match</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pending-invite">Match requests</a>
-        </li>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/open-games">Ongoing games</a>
@@ -47,44 +45,26 @@
             Things im to afraid to remove for now
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-
-            {{#if isConnected}}
             <a href="/homepage">Home</a>
-            <a href="/match">Find a match</a>
-            <a href="/pending-invite">Pending request</a>
-            <a href="/open-games">Open games</a>
-            <a href="/profile">Profile</a>
             <a href="/profile-overview">Profile Overview</a>
             <a href="/highscores">Highscores</a>
-            <a href="/auth/logout">Logout</a>
-            {{else}}
             <a href="/rules">Rules</a>
-            <a href="/auth/login">Login</a>
-            <a href="/auth/signup">Sign up</a>
-            {{/if}}
+            <a href="/auth/logout">Logout</a>
           </div>
+        {{else}}
+        <li class="nav-item">
+          <a class="nav-link" href="/rules">Rules</a>
         </li>
-
+         <li class="nav-item">
+          <a class="nav-link" href="/auth/login">Login</a>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link" href="/auth/signup">Sign up</a>
+        </li>
+    {{/if}}
       </ul>
     </div>
   </nav>
-
-  {{!-- <nav>
-    {{#if isConnected}}
-    <a href="/homepage">Home</a>
-    <a href="/match">Find a match</a>
-    <a href="/pending-invite">Pending request</a>
-    <a href="/open-games">Open games</a>
-    <a href="/profile">Profile</a>
-    <a href="/profile-overview">Profile Overview</a>
-    <a href="/highscores">Highscores</a>
-    <a href="/auth/logout">Logout</a>
-    {{else}}
-    <a href="/rules">Rules</a>
-    <a href="/auth/login">Login</a>
-    <a href="/auth/signup">Sign up</a>
-    {{/if}}
-  </nav> --}}
 
 
   {{{body}}}
