--- a/views/user/profile-edit.hbs
+++ b/views/user/profile-edit.hbs
@@ -18,7 +18,7 @@
   <br>
 
   <label>Team </label>
-  <select name="team">
+  <select name="team" class="team-dropdown">
   <option>wework, Potsdamer Platz</option>
   <option>wework, at Atrium Tower</option>
   </select>
@@ -40,13 +40,13 @@
 </div>
 
 
-<div class="btn">
+<div class="btn btn-hp" id="profile-edit-save-btn">
 <input type="submit" value="Save changes" class="btn">
 </div>
 
 
-<div class="btn" id="profile-delete-btn">
+<div class="btn btn-hp" id="profile-delete-btn">
 <form action="/profile-delete" method="POST" enctype="multipart/form-data">
-<input type="submit" value="Delete profile" >
+<input type="submit" value="Delete profile">
 </div>
 </form>
