--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -1,4 +1,7 @@
+<p class="loggedin">
 Welcome {{user.username}}
+</p>
+
 <div class="d-flex justify-content-center flex-wrap">
     
     <div>
@@ -16,15 +19,13 @@ Welcome {{user.username}}
     
 </div>
 
-<div class="d-flex justify-content-center flex-wrap">
-
-<br><br>
+<div class="gamestatus d-flex flex-column justify-content-center">
     <p name="user-score" class="pending-req">Pending requests:{{pendingNumber}}</p>
     <p name="user-score" class="nbof-open-games">Number of open games: {{openNumber}}</p>
     <br>
 </div>
 
-<div>
+<div class="d-flex justify-content-center">
     <img src="/images/table.png" class="imghomepage">
     </div>
 </div>
