--- a/public/stylesheets/style1.css
+++ b/public/stylesheets/style1.css
@@ -34,7 +34,6 @@
 }
 
 #PendingButton1{
-    background-color: white;
     text-align: center;
     width: 80%;
     margin-top: 10px;
@@ -43,10 +42,17 @@
 }
 
 #PendingButton2{
-    background-color: white;
     text-align: center;
-    margin-top: 5px;
     width: 80%;
+    margin-top: 10px;
     margin-right: 10%;
     margin-left: 10%;
+} 
+
+.card{
+        height: 100vh;
+        margin: 60px;
+        width: 6em auto;
 }
+
+
