--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -39,18 +39,15 @@
         <li class="nav-item">
           <a class="nav-link" href="/profile">Profile</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Things im to afraid to remove for now
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a href="/homepage">Home</a>
-            <a href="/profile-overview">Profile Overview</a>
-            <a href="/highscores">Highscores</a>
-            <a href="/rules">Rules</a>
-            <a href="/auth/logout">Logout</a>
-          </div>
+        <li class="nav-item">
+          <a class="nav-link" href="/profile-overview">Profile overview</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/highscores">Highscores</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/auth/logout">Logout</a>
+        </li>
         {{else}}
         <li class="nav-item">
           <a class="nav-link" href="/rules">Rules</a>
