put in ensureAuthenticated middleware in unprotected routes and defined it

--- a/views/match/confirm.hbs
+++ b/views/match/confirm.hbs
@@ -23,7 +23,7 @@
 
 <div class="textboxLayer">
   <p><strong>message:</strong></p>
-  <input class="inputConfirm" type="textarea" name="message" placeholder="Specify time and date&#10; and send that invite asap!" size="20">
+  <input class="inputConfirm" type="textarea" name="message" placeholder="Specify time and and send that invite asap!" cols="30" rows="5">
 </div>
 
 <div class="center d-flex justify-content-center">
