--- a/views/user/profile-edit.hbs
+++ b/views/user/profile-edit.hbs
@@ -6,39 +6,43 @@
   <img class="profile-picture" src={{user.imgPath}} alt="user-image">
 </div><br>
 
-<div class="profile-information">
 <div class="d-flex justify-content-center flex-wrap">
-  <div class="justtotry">
 
 <form action="/profile-edit" method="POST" enctype="multipart/form-data">
-  <input type="file" name="photo" value={{user.imgPath}}>
+<div id="profile-edit-container">
+  <input type="file" name="photo" value={{user.imgPath}} class="file-upload">
   <br>
 
-  <label>Username</label>
-  <input type="text" name="username" value={{user.username}}>
+<div class="profile-info">
+
+  <p class="profile-head"><strong>Username</strong></p>
+  <input type="text" class="change-un" name="username" value={{user.username}}>
   <br>
 
-  <label>Team </label>
-  <select name="team" class="team-dropdown">
-  <option>wework, Potsdamer Platz</option>
-  <option>wework, at Atrium Tower</option>
-  </select>
-  <br>
+  <div>
+    <p class="profile-head"><strong>Team</strong></p>
+    <div class="custom-select" style="width:300px;">
+    <select name="team" class="team-dropdown">
+    <option value="wework, Potsdamer Platz">wework, Potsdamer Platz</option>
+    <option value="wework, at Atrium Tower">wework, at Atrium Tower</option>
+    </select>
+    </div>
+  </div>
 
-  <label>Level</label>
-  <select name="level">
-  <option>Beginner</option>
-  <option>Intermediate</option>
-  <option>Professional</option>
-  </select>
-  <br>
-  <br>
-  <br>
-  <br>  
+  <div>
+    <p class="profile-head"><strong>Level</strong></p>
+    <div class="custom-select" style="width:300px;">
+    <select name="level" class="team-dropdown">
+      <option value="beginner">Beginner</option>
+      <option value="intermediate">Intermediate</option>
+      <option value="professional">Professional</option>
+    </select>
+    </div>
+  </div>
+
+</div>
 <input type="submit" value="Save changes" class="btn btn-hp" id="profile-edit-save-btn">
 </form>
-</div>
-</div>
 </div>
 
 
