--- a/public/stylesheets/style1.css
+++ b/public/stylesheets/style1.css
@@ -49,24 +49,61 @@
   margin-left: 10%;
 }
 
-#card {
+/* #wrapper {
+  width: 500px;
+  height: 300px;
+  position: relative;
+}
+.float {
+  background-color: black;
+  height: 300px;
+  margin: 0;
+  padding: 0;
+  color: white;
+} */
+/* #float-left {
+  position: fixed;
+}
+#float-right {
+  float: right;
+  height: 30%;
+  width: 40%;
+  margin: 10px;
+}
+ */
+/* .test {
+  height: 180px;
+  width: 300px;
+  margin-top: 5%;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  background-color: aliceblue;
+} */
+
+#wrapper {
+  width: 300px;
+  height: 190px;
+  position: relative;
+  margin: 10%;
+  display: flex;
+}
+.float {
+  height: 200px;
+}
+.left {
+  width: 90px;
+  margin-left: 10%;
+}
+.right {
+  float: right;
+  width: 90px;
   background-color: white;
-  width: auto;
+  margin-right: 20%;
+  height: 60%;
 }
 
-
-#first {
-    width: 200px;
-    float: left;
-    height: 300px;
-        background-color: blue;
-}
-#second {
-    width: 200px;
-    float: right;
-    height: 300px;
-    background-color: white;
-}
-#clear {
-    clear: both;
+.profile-overview {
+  width: 90%;
+  height: 60%;
 }
