--- a/views/match/open-games.hbs
+++ b/views/match/open-games.hbs
@@ -1,5 +1,4 @@
-<br>
-<h2>Open games</h2>
+<h2 class="target">Your games</h2>
 
 <div class="textboxLayer"> 
 <p>Keep track of your scores - <strong>enter the points of your matches here:</strong></p>
