--- a/views/match/player.hbs
+++ b/views/match/player.hbs
@@ -1,10 +1,9 @@
+<h2 class="target" >Choose your opponent</h2>
+
 <div class ="textboxLayer">
   <p><strong>Your playground: </strong><br>
     {{tableData.address}}</p>
 </div>
-<br>
-
-<h2>Now choose your opponent:</h2>
 
 <div class ="textboxOpponent" >
   <hr class="line-player">
@@ -17,7 +16,7 @@
 
 </div>
 
-<h2>or</h2>
+<h2 class="h2-class">or</h2>
 
 <div class = "textboxOpponent" >
 
