--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -19,7 +19,9 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-white" id="navbar">
-    <a class="navbar-brand" href="/homepage"><img src="/images/pingPong.png" id="logo"></a>
+    <a class="navbar-brand" href="homepage"><img src="/images/pingPong.png" id="logo">
+    <div class="nav-header"></div></a>
+    {{!-- <a class="navbar-brand" href="/homepage"><img src="/images/pingPong.png" id="logo"></a> --}}
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -78,7 +80,6 @@
     crossorigin="anonymous"></script>
   {{!-- Own js --}}
   <script src="/javascripts/main.js"></script>
-  <script src="/javascripts/handler.js"></script>
   <script src="/javascripts/script.js"></script>
 </body>
 
