--- a/views/match/confirm.hbs
+++ b/views/match/confirm.hbs
@@ -1,10 +1,11 @@
-<h2>Confirm your match</h2>
+<h2 class="target">Confirm your match</h2>
 
 <form action="/confirm" method="POST">
 
 <div class="textboxLayer">
   <p><strong>playground:</strong></p>
   <input type="hidden"name="table" value={{tableData._id}}>
+  <input type="hidden"name="tableAddress" value={{tableData.address}}>
   <p>{{tableData.address}}</p>
 </div>
 
@@ -23,7 +24,7 @@
 
 <div class="textboxLayer">
   <p><strong>message:</strong></p>
-  <input class="inputConfirm" type="textarea" name="message" placeholder="Specify time and and send that invite asap!" cols="30" rows="5">
+  <textarea class="inputConfirm" name="message" placeholder="Specify time and and send that invite asap!"></textarea>
 </div>
 
 <div class="center d-flex justify-content-center">
