Status before correcting picky stuff

--- a/views/highscores.hbs
+++ b/views/highscores.hbs
@@ -1,6 +1,8 @@
-<br>
+<h2 class="target">Highscores</h2>
 
-<h2>High Scores</h2>
+{{!-- //Put in intro text here --}}
+{{!-- <p></p> --}}
+
 <br>
 <table class="table">
   <thead>
