--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -33,13 +33,13 @@
           <a class="nav-link" href="/match">Schedule match</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/pending-invite">Match requests</a>
+          <a class="nav-link" href="/pending-invite">Match invitations</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/open-games">Ongoing games</a>
+          <a class="nav-link" href="/open-games">Your matches</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/profile">Profile</a>
+          <a class="nav-link" href="/profile">Your profile</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/profile-overview">Profile overview</a>
