--- a/views/user/profile-edit.hbs
+++ b/views/user/profile-edit.hbs
@@ -1,3 +1,5 @@
+<h2 class="target">Edit your profile</h2>
+
 <div class="profile-un">
     <p name="username" id="profile-un"> {{user.username}} </p>
 </div>
