--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -1,5 +1,4 @@
-{{!-- <br>
-<h1>Profile page</h1> --}}
+<h2 class="target">Your profile</h2>
 
 <div class="profile-un">
     <p name="username" id="profile-un"><strong>{{user.username}} </strong></p>
