--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,5 +1,5 @@
 
-<h2>Login</h2>
+<h2 class="target">Login</h2>
 
 <div class="signup-container d-flex justify-content-center">
 <div class="signupfields">
