--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,4 +1,4 @@
-<h2>Signup</h2>
+<h2 class="target">Signup</h2>
 
 <form class="signupform" action="/auth/signup" method="POST" id="form-container">
 
