--- a/views/rules.hbs
+++ b/views/rules.hbs
@@ -1,5 +1,4 @@
-<br>
-<h2>How it works</h2>
+<h2 class="target">How it works</h2>
 <br>
 <div id="rules">
     <p> <strong>01. The app</strong> <br>
