--- a/public/stylesheets/style1.css
+++ b/public/stylesheets/style1.css
@@ -83,9 +83,10 @@
 
 #overview-container {
   width: 400px;
-  height: 190px;
+  height: 77px;
   margin-left: 1em;
   display: flex;
+  justify-content: center;
 }
 .float {
   height: 200px;
@@ -96,16 +97,18 @@
   margin-right: 0;
 }
 .right {
-  float: right;
   width: 190px;
   background-color: white;
-  margin-right: 20%;
-  height: 35%;
+  height: 70px;
 }
 
 .img-overview {
-  width: 50%;
-  height: 35%;
+  width: 70px;
+  height: 70px;
+  margin-right: 10px;
+}
+.image-holder {
+  width: 100px;
 }
 
 .card-text {
