--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,7 @@
     <p>Welcome to</p>
     <h1>{{title}}</h1>
     <p class="indexText">
-        The app that helps you keep track of your ping pong success story. <br>
+        The app that helps you <strong>keep track of your ping pong success story</strong>. <br>
         Just choose an opponent, schedule a match and rock that game!
     </p>
 </div>
