--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,7 +4,6 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
-
 #map {
   width: 100%;
   height: 400px;
@@ -24,13 +23,11 @@ p {
   border-radius: 0px;
   height: 58px;
   text-align: center;
-
 }
 
 .btn-hp{
   width: 300px;
-  height: 58px;
-  margin: 0.5em 0.5em;
+  margin: 0.5em auto;
 }
 
 .pending-req{
