--- a/views/user/profile-overview.hbs
+++ b/views/user/profile-overview.hbs
@@ -19,11 +19,10 @@
 
   <img class="img-overview" src={{this.imgPath}} alt="user-image">
 
-  <div class=" right">
-     <p class="card-text"><strong>Username: </strong></p>
-    <p>{{this.username}}</p>
-    <p><strong>Level: </strong></p>
-    <p>{{this.level}}</p> <br> 
+  <div class="right">
+    <p class="card-text"><strong>Username: </strong>{{this.username}}</p>
+    <p class="card-text level"><strong>Level: </strong>{{this.level}}</p>
+   
   </div>
 </div>
 {{/each}}
