--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -1,10 +1,10 @@
 <h2 class="target" >Ping Pong</h2>
 
 <p class="loggedin">
-Welcome {{user.username}}
+<strong>Welcome {{user.username}}</strong> 
 </p>
 
-<div class="d-flex justify-content-center flex-wrap">
+<div class="d-flex justify-content-center flex-wrap mt-2">
     
     <div>
         <a href="match"><button type="button" id="buttontohover" class="btn btn-hp">Schedule match</button></a>
@@ -34,7 +34,7 @@ Welcome {{user.username}}
 
 <br>
 
-<div class="d-flex justify-content-center">
+<div class="d-flex justify-content-center mt-3">
     <img src="/images/table.png" class="imghomepage">
     </div>
 </div>
