--- a/views/match/pending-invite.hbs
+++ b/views/match/pending-invite.hbs
@@ -1,8 +1,9 @@
 <h2 class="target">Pending invitation</h2>
 {{#each matchData}}
 
-<div class="textboxLayer">
-  <p><strong>You have an invite from:</strong> {{this._player1.username}}</p>
+<div class="textboxLayerPending">
+  <p><strong>You have an invite from:</strong> <br>
+  {{this._player1.username}}</p>
   <p><strong>Where: </strong> <br>
   {{this._table.address}}</p>
   <p><strong>Message from opponent: </strong><br>
