--- a/public/stylesheets/style-k.css
+++ b/public/stylesheets/style-k.css
@@ -37,7 +37,7 @@
 .btn-table{
   background-color: white;
   width: 90%;
-  margin: 0.5em auto;
+  margin: 0.2em auto;
 }
 
 #buttontohover:hover{
@@ -154,7 +154,11 @@
 }
 
 .openpoints {
-  text-align: right;
+  text-align: left;
+}
+
+.pointsPlayer {
+  width: 100%;
 }
 
 .btn-edit {
@@ -180,7 +184,8 @@
 }
 
 .loggedin {
-  margin: 0.5em;
+  margin-top: 1.5em;
+  text-align: center;
 }
 
 .pendingNumber {
@@ -216,4 +221,12 @@
   display: inline;
   margin-left: 0.5em;
   font-size: 0.8em;
+}
+
+.textboxLayerPending {
+  width: 90%;
+  background-color: rgba(255, 255, 255, 0.3);
+  text-align: left;
+  margin: 1em auto; 
+  padding: 0.5em;
 }
