--- a/views/match/open-games.hbs
+++ b/views/match/open-games.hbs
@@ -11,15 +11,15 @@
 <form action="/points-confirm" method="POST">
 
 <div class="openpoints">
-<p><strong>Points {{this._player1.username}}</strong>:
-  <input name="pointsPlayer1" type="number" min="0">
+<p><strong>Points {{this._player1.username}}</strong>: <br>
+  <input class="pointsPlayer" name="pointsPlayer1" type="number" min="0">
 </p>
 {{!-- Passing the id of player1 in hidden input field  --}}
 <input name="idPlayer1" type="hidden" value={{this._player1._id}}>
 <br>  
 
-<p><strong>Points {{this._player2.username}}</strong>:
-  <input name="pointsPlayer2" type="number" min="0">
+<p><strong>Points {{this._player2.username}}</strong>: <br>
+  <input  class="pointsPlayer" name="pointsPlayer2" type="number" min="0">
 </p>
 {{!-- Passing the match id in hidden input field  --}}
 <input name="matchId" type="hidden" value={{this._id}}>
