--- a/views/match/player.hbs
+++ b/views/match/player.hbs
@@ -10,21 +10,23 @@
 
   <p><strong>I know who I want to play:</strong></p>
   <form class="formPlayer" action="/match/{{tableData._id}}/direct" method="POST">
-  <input class="inputPlayer" type="text" name="directOpponent" placeholder="Just type in the username">
+  <input class="inputPlayer" type="text" name="directOpponent" placeholder="Type in the username of your opponent">
   <button class="btn btn-player" id="buttontohover" type="submit">Select opponent</button>
   </form>
 
 </div>
 
-<h2 class="h2-class">or</h2>
+
+<h2 class="h2-class">OR</h2>
+
 
 <div class = "textboxOpponent" >
 
-  <p><strong>Are you up for a new challenge?</strong></p>
-  <p>We have new match for you:</p>
+  <p><strong>I want new ping pong friends!</strong></p>
+  <p>Meet your next opponent:</p>
   <form class="formPlayer" action="/match/{{tableData._id}}/random" method="POST">
   <input  class="inputPlayer" type="hidden" name="randomOpponent" value={{randomName}}>
-  <p><strong>{{randomName}}</strong></p>
+  <p class="randomName"><strong>{{randomName}}</strong></p>
   <button class="btn btn-player" id="buttontohover" type="submit">Select opponent</button>
   </form>
 
