--- a/views/highscores.hbs
+++ b/views/highscores.hbs
@@ -1,9 +1,11 @@
 <h2 class="target">Highscores</h2>
 
-{{!-- //Put in intro text here --}}
-{{!-- <p></p> --}}
+<div class="queen">
+<p>The current ping pong queen is <br>
+<img class="crown" src="../images/crown.png" alt="crown"> <br>
+<strong>{{queen}}</strong></p>
+</div>
 
-<br>
 <table class="table">
   <thead>
     <tr>
