--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -113,12 +113,27 @@ become the same size */
 }
 
 .btn-upload {
-  background-color: white;
+  background-color: #C6D9C5;
   width: 100%;
-  margin: 0.5em auto;
 }
 
 .edit-form {
   width:90%;
 }
 
+.queen {
+  width: 90%;
+  background-color: rgba(255, 255, 255, 0.3);
+  text-align: center;
+  margin: 1em auto; 
+  padding: 0.5em;
+}
+
+.crown {
+  margin: 0.3em;
+}
+
+.dropdown {
+  width: 90%;
+  height: 30px;
+}
