--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -1,4 +1,4 @@
-<h2 class="target" >Ping Pong</h2>
+<h2 class="target" >Home of Ping Pong</h2>
 
 <p class="loggedin">
 <strong>Welcome {{user.username}}</strong> 
