added pending explanation

--- a/views/match/pending-invite.hbs
+++ b/views/match/pending-invite.hbs
@@ -1,4 +1,10 @@
 <h2 class="target">Pending invitation</h2>
+
+<div class="textboxLayer"> 
+<p>Here are <strong>your pending invites</strong></p>
+<p>(If you don't have any head over to the <a class="signup-link" href="/match">schedule match page</a>)</p>
+</div>
+
 {{#each matchData}}
 
 <div class="textboxLayerPending">
