--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -65,8 +65,14 @@
     </div>
   </nav>
 
-
   {{{body}}}
+
+
+  <footer class="footer">
+    <p>
+      &copy; Eullin, Katrin & Pernille 2018
+    </p>
+  </footer>
   {{!-- Google API tag --}}
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUeQXCyJDlhOtCB8JwWAk8zCxpjk6k-jo"></script>
   {{!-- Axios tag --}}
