--- a/public/stylesheets/style-k.css
+++ b/public/stylesheets/style-k.css
@@ -230,3 +230,13 @@
   margin: 1em auto; 
   padding: 0.5em;
 }
+
+.footer {
+  text-align: right;
+  font-size: 0.7em;
+  background-color: rgba(255, 255, 255, 0.3);
+  padding: 0.5em;
+  position: fixed;
+  bottom: 0;
+  width: 100%
+}
