--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -59,8 +59,9 @@ p {
 }
 
 .profile-picture{
-  width: auto;
-  height: 100%;
+  width: 100%;
+  height: 20vh;
+  object-fit: cover;
   margin-left: auto;
 	margin-right: auto;
 	display: block;
